--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id="title">Bloomstone: Konzept-Trailer</h1>
     <div id="outerContainer">
         <div id="videoContainer">
-        <video width="640" height="453" controls poster="./media/Thurtal_04_01.png" preload="metadata">
+        <video id="actualVideo" width="640" height="453" controls poster="./media/Thurtal_04_01.png" preload="metadata">
             <source src="./media/Bloomstone_Konzept_Trailer_DEU_v4_HQ.mp4" type="video/mp4">
         </video>
         </div>
