--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
-    <h1 id="title">Bloomstone: Konzept-Trailer</h1>
+    <h1 id="title1">Bloomstone</h1>
+    <h2 id="title2">Konzept Trailer</h2>
     <div id="outerContainer">
         <div id="videoContainer">
-        <video id="actualVideo" width="640" height="453" controls poster="./media/Thurtal_04_01.png" preload="metadata">
+        <video id="actualVideo" width="640" height="453" controls poster="./media/Thurtal_04_01.png" preload="metadata" controlsList="nodownload">
             <source src="./media/Bloomstone_Konzept_Trailer_DEU_v4_Mobile.mp4" type="video/mp4">
         </video>
         </div>
