changed trailer, background, title and added gameplay Pictures

--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bloomstone</title>
+    <link rel="icon" type="image/x-icon" href="./media/Bloomstone_Icon_02_600px.png">
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
-    <h1 id="title1">Bloomstone</h1>
-    <h2 id="title2">Konzept Trailer</h2>
+    <img src="./media/Bloomstone_title.png" alt="title" id="titlePicture">
     <div id="outerContainer">
         <div id="videoContainer">
-        <video id="actualVideo" width="640" height="453" controls poster="./media/Thurtal_04_01.png" preload="metadata" controlsList="nodownload">
-            <source src="./media/Bloomstone_Konzept_Trailer_DEU_v4_Mobile.mp4" type="video/mp4">
+        <video id="actualVideo" width="640" height="453" controls poster="./media/Thurtal_03_5_001.jpg" preload="metadata" controlsList="nodownload">
+            <source src="./media/Bloomstone Konzept-Trailer DEU v5 mobile.mp4" type="video/mp4">
         </video>
         </div>
     </div>
+    <img src="./media/Game Design 1.JPG" width="640" height="453" alt="picture1" class="gameplayPictures">
+    <img src="./media/Game Design 2.JPG" width="640" height="453" alt="picture1" class="gameplayPictures">
+    <img src="./media/Game Design 3.JPG" width="640" height="453" alt="picture1" class="gameplayPictures">
+    <img src="./media/Game Design 4.JPG" width="640" height="453" alt="picture1" class="gameplayPictures">
+
 </body>
 </html>
